WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13869
Many leaks seen on buildbot after
r21735
https://bugs.webkit.org/show_bug.cgi?id=13869
Summary
Many leaks seen on buildbot after r21735
Geoffrey Garen
Reported
2007-05-24 23:41:53 PDT
Title says it all. The new leaks seem to be in RenderSlider, so I think r 21739 is to blame.
Attachments
Fix the leak and another regression from r21735
(19.85 KB, patch)
2007-05-25 01:09 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Fix the leak and another regression from r21739
(19.85 KB, patch)
2007-05-25 01:45 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-25 01:09:41 PDT
Created
attachment 14713
[details]
Fix the leak and another regression from
r21735
mitz
Comment 2
2007-05-25 01:45:27 PDT
Created
attachment 14714
[details]
Fix the leak and another regression from
r21739
Fixed the revision number.
Darin Adler
Comment 3
2007-05-25 08:04:37 PDT
Comment on
attachment 14714
[details]
Fix the leak and another regression from
r21739
r=me
Darin Adler
Comment 4
2007-05-25 17:14:09 PDT
Committed revision 21789.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug