LayoutTests:

Reviewed by Darin.

        - http://bugs.webkit.org/show_bug.cgi?id=13869
          Many leaks seen on buildbot after r21735

        Added a test that ::-webkit-slider-thumb style is actually applied.

        * fast/forms/slider-thumb-stylability-expected.checksum: Added.
        * fast/forms/slider-thumb-stylability-expected.png: Added.
        * fast/forms/slider-thumb-stylability-expected.txt: Added.
        * fast/forms/slider-thumb-stylability.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13869
          Many leaks seen on buildbot after r21735

        - fix another regression from r21739: ::-webkit-slider-thumb style not
          applied.

        Test: fast/forms/slider-thumb-stylability.html

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::setStyle):
        (WebCore::RenderSlider::createThumbStyle):



Canonical link: https://commits.webkit.org/18192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21789 268f45cc-cd09-0410-ab3c-d52691b4dbfc